2008-09-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::pasteRuleAbove): More checks for
	operations with rules and ruleset on the deleted Policy or NAT
	object. User should not be able to change anything in rule set
	object that has been deleted because it does not have parent
	firewall object.

	* FWWindow.cpp (FWWindow::prepareEditMenu): more fixes for bug
	#2100415: "cannot re-create or clone Routing object". Properly
	synchronizing main menu Edit to make sure user can not delete
	Ruleset objects.

	* instDialog.cpp (instDialog::initiateCopy): fixed bug (no #): if
	the name of the plink.exe program was specified in upper case in
	Preferences dialog, built-in installer failed to provide correct
	command line options to it.

	* ObjectManipulator.cpp (ObjectManipulator::getMenuState): fixed
	bug #2100415: "cannot re-create or clone Routing object". The GUI
	does not let the user to delete Routing object. Policy and NAT
	objects can be deleted as long as there is at least one more
	left. Also "top" rule set objects can not be deleted at all.

	* ObjectManipulator.cpp (ObjectManipulator::pasteTo): fixed
	bug (no #): added ability to copy/paste rule set objects.

2008-09-09  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWBSettings.cpp (FWBSettings::setExpandedObjectIds): bug
	#2091225: "Can objects in the left pane remember last state.". The
	program saves state of the object tree branches (expanded or
	collapsed) between sessions. 

	* FWBSettings.cpp (FWBSettings::getVisibleRuleSetId): bug #2099631
	"GUI should rememver firewall object that was opened last". The
	program remembers opened ruleset between sessions.


2008-09-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* fwbedit.cpp (usage): fixed "usage" in fwbedit, command line
	option that specifies object attributes for the command "new" is
	"-a", not  "-o". Also fixed this in the man page.

2008-09-08  vadim  <vadim@vk.crocodile.org>
